--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="esp">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,13 @@
     <title>Ejemplo catalogo</title>
     <link rel="stylesheet" href="styles/style.css">
 <body>
-    
+    <div class="prueba">
+        <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+        <div class="contenido">
+            <h2>Flores</h2>
+            <p>Lorem ipsum dolor sit amet consectetur nulla at ipsum eum esse quibusdam dicta eius vero, corporis maiores dolorem fuga harum labore? Vitae minima consequatur dicta.</p>
+        </div>
+    </div>
+    <p></p>
 </body>
 </html>
