--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
         <div class="contenido">
             <h2>Flores</h2>
-            <p>Lorem ipsum dolor sit amet consectetur nulla at ipsum eum esse quibusdam dicta eius vero, corporis maiores dolorem fuga harum labore? Vitae minima consequatur dicta.</p>
+            <p> cambio de texto del parrafo desde Github</p>
         </div>
     </div>
     <p></p>
