--- a/index.html
+++ b/index.html
@@ -51,12 +51,268 @@
             </div>
             <div class="buscar">
                 <div class="subbus">
-                  <label for=""><img src="img/lupa.png" alt=""></label>  <input type="text" class="outlinenone" placeholder="Buscar Pelicula...">
+                  <label for=""><img src="img/lupa.png" alt=""></label>  <input type="text"  placeholder="Buscar Pelicula...">
                 </div>
             </div>
         </nav>
     </header>
     <main>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
+        <div class="cartelera">
+            <img src="img/51-514884_free-download-iron-man-full-hd-wallpapers-free.jpg" alt="">
+            <div class="valoracion">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+                <img src="img/estrellasb.png" alt="">
+            </div>
+            <div class="contenido">
+                <h1>Nombre Pelicula</h1>
+                <div class="descri">
+                    <h2>lorem loerm lorem </h2>
+                </div>
+            </div>
+        </div>
 
     </main>
 </body>
